# fair-ease-data-transforms

./: .gitignore  EMO-BON-Data.ipynb  LICENSE  README.md  Taxonomy_dataframes.ipynb  pyproject.toml  requirements.txt
notebooks/: Taxonomy_dataframes.ipynb
src/: utils.py
transformed_tables/: LSU_Archaea_class.csv  LSU_Archaea_family.csv  LSU_Archaea_genus.csv  LSU_Archaea_orderx.csv  LSU_Archaea_phylum.csv  LSU_Archaea_species.csv  LSU_Bacteria_class.csv  LSU_Bacteria_family.csv  LSU_Bacteria_genus.csv  LSU_Bacteria_kingdom.csv  LSU_Bacteria_orderx.csv  LSU_Bacteria_phylum.csv  LSU_Bacteria_species.csv  LSU_Eukaryota_class.csv  LSU_Eukaryota_family.csv  LSU_Eukaryota_genus.csv  LSU_Eukaryota_kingdom.csv  LSU_Eukaryota_orderx.csv  LSU_Eukaryota_phylum.csv  LSU_Eukaryota_species.csv
