[tool.poetry]
name = "fair-ease-data-transforms"
version = "0.1.0"
description = ""
authors = ["Cymon J. Cox <cymon.cox@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^1.1.0"
numpy = "^2.1.1"
pandas = "^2.2.2"
pandasql = "^0.7.3"
minio = "^7.2.8"
timeit-decorator = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
