[tool.poetry]
name = "fair-ease-data-transforms"
version = "0.1.0"
description = "Transform the metaGOflow results data"
authors = ["Cymon J. Cox <cymon.cox@googlemail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
duckdb = "^1.1.0"
numpy = "^2.1.1"
pandas = "^2.2.2"
pandasql = "^0.7.3"
minio = "^7.2.8"
pyarrow = "^17.0.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.8.0"}
pre-commit = "^3.8.0"
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
